--- a/ACM2D/ACM2D/ACM2D/ACM2D.csproj
+++ b/ACM2D/ACM2D/ACM2D/ACM2D.csproj
@@ -107,6 +107,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Debugging.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
