--- a/ACM2D/ACM2D/ACM2D/ACM2D.csproj
+++ b/ACM2D/ACM2D/ACM2D/ACM2D.csproj
@@ -107,7 +107,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Camera.cs" />
     <Compile Include="Debugging.cs" />
+    <Compile Include="Doors.cs" />
+    <Compile Include="MapReader.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
